--- a/index.html
+++ b/index.html
@@ -3,46 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
-  <title>Plushies</title>
-  </head>
-  <body>
-  <header id="header"> Navbar
-    <img id="header-img" src="https://www.google.com/imgres?q=plushie&imgurl=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FI%2F71g8A-gNgEL._AC_UF894%2C1000_QL80_.jpg&imgrefurl=https%3A%2F%2Fwww.amazon.com%2FAvocatt-Kawaii-Mushroom-Plushie-Toy%2Fdp%2FB0B7MVZWC6&docid=PSlJlrMiZ6yhMM&tbnid=4OSMmM4RT1XsOM&vet=12ahUKEwj70tDu4M2LAxWhDEQIHdpHDmwQM3oECGUQAA..i&w=865&h=1000&hcb=2&ved=2ahUKEwj70tDu4M2LAxWhDEQIHdpHDmwQM3oECGUQAA"></img>
-    <nav id="nav-bar">
-      <a class="nav-link" href="#email">Email</a>
-      <a class="nav-link" href="#video">Video</a>
-      <a class="nav-link" href="#description"> Info</a
-    </nav>
-  </header>
-  <video id="video" src="https://www.youtube.com/watch?v=mHQ-H7fAJLQ"></video>
-  <form id="form" action="https://www.freecodecamp.com/email-submit">
-    <input id="email" placeholder="Enter your email adress" type="email" name="email"></input>
-    <input id="submit" type="submit"></input>
-    <p id="description">We will sell animal plushies at different price ranges. Our plushies will have great quality along with a 1 year warranty in case of any damage.</p>
-    </form>
-  </body>
-
-  CSS
-  *{
-    padding: 0;
-    margin: 0;
+   <link rel="stylesheet" href="styles.css">
+   <title>Personal Portfolio</title>
+   </head>
+   <body>
+     <nav id="navbar">
+       <header>Navbar</header>
+       <p><a class="nav-link" href="#me">About</a></p>
+       <p><a class="nav-link" href="#projects">Projects</a></p>
+       <p><a class="nav-link" href="#section3">Contact</a></p>
+       </nav>
+     <section id="welcome-section">
+       <h1 id="me"> Hello my name is Juan </h1>
+</section>
+<section id="projects">
+  <div class="project-tile">
+  <a>Project 1</a>
+  <a>Project 2</a>
+  <a>Project 3</a>
+  <a> Project 4</a>
+  </div>
+  </section>
+  <section id="section3">
+<h2>Feel free to contact me</h2>
+<a id="profile-link" target="_blank"> Facebook</a>
+<a id="profile-link" target="_blank">Github</a>
+<a id="profile-link" target="_blank">Email</a>
+</section>
+ 
+CSS 
+#me{
+  text-align:center;
+    background-color:
+    grey; 
+    padding:10px;
   }
-     #nav-bar {
-   position: fixed;
-   top: 0;
-  min-height:75px;
- background-color: red;
-   padding: 0px 20px;
-   margin:0px;
-   align-items: center;
-   justify-content: space-around;
-   display:flex;
- }
- 
- p {
-   text-align: center;
-   margin: 50px;
-   margin-left: 220px;
- }
- 
+  #navbar{
+    position:fixed;
+  display:flex;
+  flex-direction:row;
+  gap:40px;
+  justify-content:center;
+  top:0px;
+  }
+  
+  .nav-link{
+   
+  }
+  .project-tile{
+    display:flex;
+  padding:40px;
+  margin:10px;
+  justify-content: center;
+  space-around: 
+  }
+  h2{
+    text-align:center;
+  }
+  #profile-link{
+  text-align:center;
+  margin:30px;
+  padding:10px;
+  position:relative;
+  }
+  #section3{
+    background-color:brown;
+  
+  }
+  @media screen and (max-width: 600px) {
+    #navbar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    body{
+      margin:0px;
+      padding:0px;
+    }
